[project]
name = "data-json-mcp-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.0",
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "setuptools>=82.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]