[project]
name = "data-json-mcp-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=6.0",
    "fastmcp[tasks]>=3.0.0",
    "mcp[cli]>=1.26.0",
    "pandas>=2.2.2",
    "regex>=2026.2.28",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datajson"]
